Fixed bug #60367 (Reflection and Late Static Binding)

git-svn-id: http://svn.php.net/repository/php/php-src/trunk@319745 c90b9560-bf6c-de11-be94-00142212c4b1